# stock-analysis-tool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_analysis.py  stock_analysis.ipynb  stock_analysis.py
src/: stock_analysis.py
src/stock_analysis_tool/: __init__.py  stock_analysis.py
stock_data/: AMZN.csv
tests/: test_stock_analysis.py
