[project]
name = "stock-analysis-tool"
version = "0.2.0"
description = "A tool for analyzing stock data."
requires-python = ">=3.14"
dependencies = [
    "yfinance",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "ty>=0.0.14",
    "ruff>=0.14.10",
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ty.environment]
python-version = "3.14"
root = ["src"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "B", "A", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest]
addopts = ["-ra", "-v"]
testpaths = ["tests"]
pythonpath = ["src"]
